# asyncio-for-robotics

./: .gitignore  README.md  cross_platform.md  own_proto_example.md  pixi.toml  pyproject.toml  recipe.yaml  using_scope.md  using_session.md  using_with_ros.md  variants.yaml
.github/workflows/: clean_cach.yml  python-package.yml  python-pixi.yml  python-pytest.yml  ros-pixi.yml  ros-pytest.yml
architecture/: lifetime_scope_plan.md  session_structure.md
asyncio_for_robotics/: __init__.py
asyncio_for_robotics/core/: __init__.py  _compat.py  pub.py  scope.py  sub.py  utils.py
asyncio_for_robotics/example/: README.md  custom_stdout.py  ros2_discussion.py  ros2_double_listener.py  ros2_double_talker.py  ros2_event_callback.py  ros2_listener.py  ros2_pubsub.py  ros2_service_client.py  ros2_service_server.py  ros2_talker.py  zenoh_discussion.py
asyncio_for_robotics/ros2/: __init__.py  service.py  session.py  session_types.py  sub.py  utils.py
asyncio_for_robotics/textio/: __init__.py  sub.py
asyncio_for_robotics/zenoh/: __init__.py  session.py  sub.py
dev_tools/: install_activate.bash  publish.md  test_io.bash  test_ros2.bash  test_zenoh.bash
dev_tools/humble/: Dockerfile  test.bash
dev_tools/jazzy/: Dockerfile  test.bash
examples/: zenoh_example.py
tests/: README.md  base_tests.py  conftest.py  debug.log.jsonl  pytest.ini  test_core.py  test_ros2_pubsub.py  test_ros2_pubsub_sync.py  test_ros2_pubsub_thr.py  test_ros2_serv.py  test_ros2_stdout_echo.py  test_scope.py  test_textio.py  test_utils.py  test_zenoh_pubsub.py
tests/bench/: afor_ros2.prof  afor_ros2.py  afor_ros2_experimetal.py  afor_ros2_sync.py  afor_ros2_thrd.py  afor_zenoh.py  debug.log.jsonl  profile.html  profile.json  ros2.py
