# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["asyncio_for_robotics"]

[project]
name = "asyncio_for_robotics"
version = "0.0.1"
description = "Asyncio interface for ROS 2, Zenoh, and other robotics middleware."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Elian", email = "no@no.com" }
]
requires-python = ">=3.8"
keywords = ["asyncio", "robotics", "ros2", "zenoh", "publisher", "subcriber"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
]

[project.optional-dependencies]
ros2 = []
zenoh = ["eclipse-zenoh>=1.0.0"]
dev = ["colorama", "pytest", "pytest-async"]

[project.urls]
Homepage = "https://github.com/2lian/asyncio-for-robotics"
Repository = "https://github.com/2lian/asyncio-for-robotics"
Issues = "https://github.com/yourusername/asyncio-for-robotics/issues"

